2010-12-20  Yuzo Fujishima  <yuzo@google.com>

Reviewed by Eric Seidel.

        Fix for Bug 26183 - [@font-face] font-family descriptor with multiple names should be discarded
        https://bugs.webkit.org/show_bug.cgi?id=26183

        * fast/css/font-face-font-family-descriptor-expected.txt: Added.
        * fast/css/font-face-font-family-descriptor.html: Added.
        * platform/win/css2.1/resources/Mac-compatible-font-fallback.css:
        (@font-face): Rewrote @font-face rules that specify multiple font families.
2010-12-20  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Eric Seidel.

        Fix for Bug 26183 - [@font-face] font-family descriptor with multiple names should be discarded
        https://bugs.webkit.org/show_bug.cgi?id=26183

        Test: fast/css/font-face-font-family-descriptor.html

        * css/CSSParser.cpp:
        (WebCore::CSSParser::createFontFaceRule): Consider @font-face rule
        invalid if its font-family descriptor has multiple (or zero) families.

Canonical link: https://commits.webkit.org/64743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74401 268f45cc-cd09-0410-ab3c-d52691b4dbfc